--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.sodashop</groupId>
-    <artifactId>Soda-Shop-SpirngBoot</artifactId>
+    <artifactId>Soda-Shop-SpringBoot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Soda-Shop-SpirngBoot</name>
+    <name>Soda-Shop-SpringBoot</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
